2/9/2013 - version 0.99.27:
   - Added includeRts option to userTimeline
   - Updated man pages and vignette to pass check
1/21/2013 - version 0.99.26:
   - use rjson 0.2.24 to avoid some unicode issues
   - supply argument blockOnRateLimit which does what the name suggests
1/2/2013 - version 0.99.24:
   - Convert search to the 1.1 API
12/27/2012 - version 0.99.23:
   - Conversion for the 1.1 API
   - Multiple functions (e.g. publicTimeline()) were removed due to
     the corresponding functionality being removed from the API
   - The trend system has been completely rewritten
   - The rate limit system has been completely rewritten
   - The friendships() function has been added
2/20/2012 - version 0.99.19:
   - Fixed a bug in lookupUsers where screen names that had upper
     case characters in them weren't being properly populated
   - Switched (temporarily) to rjson in order to properly handle unicode
     text data from Twitter
   - Changed DM sender_id and recipient_id to be using the corresponding
     id_str